# xcreen

./: .gitignore  Cargo.toml  README.md  build.rs  installer.iss
.github/workflows/: release.yml  tag-release.yml
src/: main.rs  xcreen.exe.manifest
src/modules/: config.rs  logger.rs  mod.rs  monitor.rs  sensor.rs  watcher.rs
