[package]
name = "xcreen"
version = "0.1.0"
description = "External Monitor Brightness Control"
authors = ["Sansith Fernando"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/xerosf/xcreen"
license-file = "LICENSE"
build = "build.rs"

# Performance optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "xcreen"
path = "src/main.rs"

[dependencies]
# System tray
tray-icon = "0.21"
winit = "0.29"
image = { version = "0.24", default-features = false, features = ["png"] }

# Config persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = { version = "0.4", features = ["std"] }

# Windows APIs for DDC/CI and light sensor
windows = { version = "0.56.0", features = [
    "Devices_Sensors",
    "Foundation", 
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging"
] }

# Autostart (Windows registry)
winreg = "0.51"

# Config file watching
notify = "6.1"

[build-dependencies]
winres = "0.1"
