[package]
name = "XCreen"
version = "0.4.0"
description = "External Monitor Brightness Control"
authors = ["Sansith Fernando"]
edition = "2024"
rust-version = "1.95"
readme = "README.md"
repository = "https://github.com/xerosf/XCreen"
license-file = "LICENSE"
build = "build.rs"

# Performance optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[[bin]]
name = "XCreen"
path = "src/main.rs"

[dependencies]
# System tray
tray-icon = "0.21"
image = { version = "0.24", default-features = false, features = ["png"] }

# Config persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = { version = "0.4", features = ["std"] }

# Windows APIs for DDC/CI and light sensor
windows = { version = "0.56.0", features = [
    "Devices_Sensors",
    "Foundation", 
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell"
] }

windows-reactor = { git = "https://github.com/microsoft/windows-rs", rev = "2ad09303" }

# Autostart (Windows registry)
winreg = "0.51"

# Config file watching
notify = "6.1"

[build-dependencies]
winres = "0.1"
windows-reactor-setup = { git = "https://github.com/microsoft/windows-rs", rev = "2ad09303" }
